added ublock origin and signal

--- a/learning.html
+++ b/learning.html
@@ -66,6 +66,9 @@
 
           <h4><a target="_blank" class="greyLink" href="https://adblockplus.org/">Adblock Plus: </a></h4>
           <p>One way to keep data marts from tracking and selling ad-based information is to disable the ability for websites to serve you ads. Ad blocking technologies can make your data safer while giving you a more enjoyable browsing experience.</p>
+          
+		  <h4><a target="_blank" class="greyLink" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">UBlock Origin: </a></h4>
+          <p>Another good ad blocker.</p>
         </p>
 
          <p>
@@ -79,6 +82,9 @@
 
           <h4><a target="_blank" class="greyLink" href="https://www.gnupg.org/">GPG: </a></h4>
           <p>GnuPG is a GNU implementation of pgp encryption.</p>
+          
+		  <h4><a target="_blank" class="greyLink" href="https://whispersystems.org/">Signal: </a></h4>
+          <p>Signal is a great encrypted message service availale for your phone.</p>
 
           <h4><a target="_blank" class="greyLink" href="https://protonmail.com/">ProtonMail: </a></h4>
           <p>If you want encrypted email, this is a great choice. ProtonMail offers a great service for free. Unlike gmail, your data is kept in an encrypted form on their servers and end-to-end encyption is used for all communications. Everything with your account can be anonymous.</p>
