adds, need description for eff event

--- a/events.html
+++ b/events.html
@@ -55,6 +55,10 @@
         <br>
         <h4>CryptoParty: Saturday 03/11/2017 Big Idea Book Store</h4>
         <p>This event will be geared towards teaching how and why to use privacy enabling tools.</p>
+        <br>
+        <br>
+        <h4>History of Surveillance and Coallition building: Saturday 03/11/2017 at Pitt</h4>
+        <p>**Description here**</p>
         
       </div>
 
