adds for eff event

--- a/events.html
+++ b/events.html
@@ -57,8 +57,10 @@
         <p>This event will be geared towards teaching how and why to use privacy enabling tools.</p>
         <br>
         <br>
-        <h4>History of Surveillance and Coallition building: Saturday 03/11/2017 at Pitt</h4>
-        <p>**Description here**</p>
+        <h4>History of Surveillance and Coallition Building Workshop: Thursday 03/30/2017 6PM at Pitt's Sennott Square</h4>
+        <p>EFF activist/lawyer Shahid Buttar will give a talk on the history of surveillance 
+		in this country and how to fight it. Before this will be a coallition building workshop
+		aimed at increasing awareness and coordination between organizations with similar goals.</p>
         
       </div>
 
