national links added

--- a/index.html
+++ b/index.html
@@ -51,11 +51,30 @@
         <h3>About Restore the Fourth:</h3>
         <p>We are a Pittsburgh based chapter of a national movement known as Restore the Fourth.  We advocate for privacy-friendly legislation and against invasive violations of our Fourth Amendment rights. We also seek to educate the public on how and why to use privacy-enabling technologies, and to combat myths, misinformation, and stigma regarding surveillance and privacy.
         </p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<p>Connect via Facebook and Twitter:<br>
+		<a target="_blank" class="greyLink" href="https://www.facebook.com/Restore-The-Fourth-PGH-247123012407715/">RT4 facebook</a><br>
+		<a target="_blank" class="greyLink" href="https://twitter.com/RestoreThe4_PGH?lang=en">RT4 twitter</a><br>
+		<br>
+		<br>
+		</p>
+		<br>
+		<br>
+		<p>National RT4 Resources and Other Information:<br>
+		<a target="_blank" class="greyLink" href="https://restorethe4th.com/">National Website</a><br>
+		<a target="_blank" class="greyLink" href="https://twitter.com/restore_the4th?lang=en">National RT4 twitter</a><br>
+		<a target="_blank" class="greyLink" href="https://www.facebook.com/RestoreTheFourth/?hc_ref=PAGES_TIMELINE&fref=nf">National RT4 facebook</a><br>
+		<a target="_blank" class="greyLink" href="https://en.wikipedia.org/wiki/Restore_the_Fourth">RT4 Wikipedia</a><br>
+		</p>
       </div>
 
 
       <div class="footer navbar-fixed-bottom" id="sticky_footer">
-        <p>For information on RT4 email us at restorethe4pgh@protonmail.com or visit the national website at <a target="_blank" class="greyLink" href="https://restorethe4th.com/">https://restorethe4th.com/</a></p>
+        <p>For information on RT4 email us at restorethe4pgh@protonmail.com</p>
       </div>
 
 
