--- a/learning.html
+++ b/learning.html
@@ -138,7 +138,7 @@
 
 
       <div class="footer  navbar-fixed-bottom" id="sticky_footer">
-        <p>For information on RT4 email us at restorethe4pgh@protonmail.com or visit the national website at <a target="_blank" class="greyLink" href="https://restorethe4th.com/">https://restorethe4th.com/</a></p>
+        <p>For information on RT4 email us at restorethe4pgh@protonmail.com</p>
       </div>
 
 
